# libcvc

./: CMakeLists.txt  LICENSE  README.md  core.cpp  core.h  dnn.cpp  dnn.h  highgui.cpp  highgui.h  imgcodecs.cpp  imgcodecs.h  imgproc.cpp  imgproc.h  types.cpp  types.h  version.cpp  version.h  videoio.cpp  videoio.h
examples/: resize.lua
